plugins {
    id "org.springframework.boot" version "2.2.2.RELEASE" apply false
    id "io.freefair.lombok" version "5.1.0" apply false
}

apply plugin: 'java'

group = 'uk.co.empyrean'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13

subprojects {
    apply plugin: 'idea'

    apply from: "$rootDir/dependencies.gradle"

    configurations {
        compile.exclude module: "spring-boot-starter-tomcat"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}